--- a/McLaughlinUniversity/McLaughlinUniversity.csproj
+++ b/McLaughlinUniversity/McLaughlinUniversity.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
 </Project>
